Lab2_NetworkPolicyConfig/allowFrontendToBackend-plc.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: frontend-deploy
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: customer-deploy
    ports:
    - protocol: TCP
      port: 8003
  - to:
    - podSelector:
        matchLabels:
          app: product-deploy
    ports:
    - protocol: TCP
      port: 8001
  - to:
    - podSelector:
        matchLabels:
          app: shopping-deploy
    ports:
    - protocol: TCP
      port: 8002
