Lab2_NetworkPolicyConfig/allowIngressFrontend-plc.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: frontend-deploy
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: micro-ingress
